<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/root"
        android:clickable="true"
        android:background="@drawable/shape_light_pink_28"
        android:focusable="true"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_dialog_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/MyTextWorkSans20"
            android:layout_width="0dp"
            android:id="@+id/title"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="29dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_2"
            android:text="@string/confirmation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <TextView
            android:id="@+id/text"
            style="@style/MyTextRobotoR14"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="33dp"
            android:textColorLink="@color/purple_3"
            android:textColorHighlight="@color/purple_grey"
            android:layout_marginEnd="33dp"
            android:layout_height="wrap_content"
            android:text="@string/policy_confirmation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/cancel"
            style="@style/MyTextRobotoM14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:padding="8dp"
            android:text="@string/not_now"
            android:textColor="@color/purple_grey"
            app:layout_constraintBottom_toBottomOf="@+id/ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ok" />
        <TextView
            style="@style/MyTextRobotoM14"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="17dp"
            android:layout_marginEnd="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ok"
            android:padding="8dp"
            android:text="@string/agree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
