<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_onboarding_4"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/onboarding_margin_top"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/MyTextWorkSans20"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/use"
            android:textColor="@color/black" />

        <TextView
            style="@style/MyTextWorkSans20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:gravity="center"
            android:text="@string/quick_actions"
            android:textColor="@color/dark_purple" />


    </LinearLayout>


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/onboarding_expanded_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_quick_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <TextView
        android:id="@+id/textView2"
        style="@style/MyTextRoboto16"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/check_the_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/onboarding_collapsed_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_marginTop="35dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <TextView
            style="@style/MyTextRoboto16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_calls_nand"
            android:gravity="center"
            android:textColor="@color/black" />

        <TextView
            style="@style/MyTextWorkSans20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:gravity="center"
            android:text="@string/much_more"
            android:textColor="@color/dark_purple" />


    </LinearLayout>


    <ImageView
        android:layout_marginTop="31dp"
        android:layout_width="@dimen/onboarding_expanded_width"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_incoming_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>