<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_onboarding_3"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/onboarding_margin_top"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/MyTextWorkSans20"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/see_all_needed"
            android:textColor="@color/black" />

        <TextView
            style="@style/MyTextWorkSans20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:gravity="center"
            android:text="@string/notifications_nmessages"
            android:textColor="@color/dark_purple" />


    </LinearLayout>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/onboarding_collapsed_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_notification_collapsed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            style="@style/MyTextRoboto16"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/reply_to_them_right_in"
            android:textColor="@color/black" />

        <TextView
            style="@style/MyTextWorkSans20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:gravity="center"
            android:text="@string/app_name_lines"
            android:textColor="@color/dark_purple" />


    </LinearLayout>


    <ImageView
        android:layout_width="@dimen/onboarding_expanded_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_notification_expanded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>