<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_onboarding_5"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/onboarding_margin_top"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/MyTextWorkSans20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/please_lock_the_napp_in_recent_nand_do_not_close"
            android:textColor="@color/black" />

        <TextView
            style="@style/MyTextWorkSans20"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="-6dp"
            android:gravity="center"
            android:text="@string/to_keep_it_working"
            android:textColor="@color/dark_purple" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">
        <TextView
            style="@style/MyTextWorkSans20"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/do_not_use_npower_saving"
            android:textColor="@color/dark_purple" />
        <TextView
            style="@style/MyTextRoboto16"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/it_is_important_for_a_proper_work_of"
            android:textColor="@color/black" />




    </LinearLayout>
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/onboarding_expanded_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_guide_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_marginEnd="-85dp"
        android:layout_marginBottom="-45dp"
        android:src="@drawable/ic_arrow_onboarding_5"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6" />
</androidx.constraintlayout.widget.ConstraintLayout>